JNG-6349 Author module-root AGENTS.md doctrine and reactor map
Rewrite the module-root AGENTS.md: authored module purpose line, annotated
reactor map, dox doctrine block, kb_search READ discipline. Pre-existing
per-file rows relocated out of the root; all documented mvn/mvnw build
commands preserved (verified against baseline).